--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./solution/style.css" />
     <title>Checkout Form</title>
   </head>
   <body>
@@ -123,7 +123,7 @@
       <div class="product-preview">
         <div class="product-painel">
           <div class="product">
-            <img src="../Images/photo1.png" alt="" />
+            <img src="./Images/photo1.png" alt="" />
             <div class="product-info">
               <h2>Vintage Backbag</h2>
               <p>
@@ -137,7 +137,7 @@
             </div>
           </div>
           <div class="product">
-            <img src="../Images/photo2.png" alt="" />
+            <img src="./Images/photo2.png" alt="" />
             <div class="product-info">
               <h2>Levi Shoes</h2>
               <p>
